<resources>
    <string name="app_name">SenseiLocater</string>
    <string name="std_profile_fname">First Name</string>
    <string name="std_profile_lname">Last Name</string>
    <string name="std_profile_email">Email</string>
    <string name="std_profile_password">Password</string>
    <string name="std_profile_edit">Edit Pic</string>
    <string name="std_profile_rolNo">Roll No</string>
    <string name="std_profile_password_reEnter">Re_enter Password</string>
    <string name="std_profile_signup">Sign Up</string>
    <string name="teacher_profile_edu">Education</string>
    <string name="GO">GO</string>
    <string name="signup_menu_as">Sign Up AS:</string>
    <string name="signup_menu_as_teacher">Teacher</string>
    <string name="signup_menu_as_student">Student</string>
    <string name="title_activity_login">Sign in</string>
    <string name="log_out">Log Out</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


    <string name="title_item_detail">Item Detail</string>
    <string name="title_activity_teachers_list">TeachersListActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="user_name_teachers_list_activity">User name</string>
    <string name="email_address_teachers_list_activity">username@pucit.edu.pk</string>
    <string name="teachers_list_teachers_list_activity">Teachers</string>
    <string name="map_teachers_list_activity">Campus Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy_position">Associate Professor</string>
    <string name="dummy_description">PhD from University of California\nM.Phill from PUCIT\nBS CS from FAST</string>
    <string name="Search">    Search</string>
    <string name="description_label">  Description</string>


    <string name="edit">Edit</string>
    <string name="name">Name</string>
    <string name="education">Education</string>
    <string name="experience">Experience</string>
    <string name="submit">Submit</string>

    <string name="action_settings">Settings</string>
    <string name="login_signup">LOGIN</string>
    <string name="signup_signup">SignUP</string>
    <string name="Username">User Name</string>
    <string name="ename">abc@gmail.com</string>
    <string name="editprofile">Edit Profile</string>
    <string name="Notifcation">abc@gmail.com</string>
    <string name="name_notification">name</string>
    <string name="date_notification">Date</string>
    <string name="time_notification">time</string>
    <string name="R_notification">Roll no</string>


    <string name="teacher_profile_check_notify">Notify</string>
</resources>
