<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_teacher_form"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/white"
    tools:context="com.lab42.maham.senseilocater.activity_teacher_form">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_launcher"
        android:id="@+id/teacher_profile_pic"
        android:layout_centerHorizontal="true"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/teacher_profile_pic"
        android:id="@+id/btn_teacher_profile_edit"
        android:text="@string/std_profile_edit"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"
        />
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Teac_Fname_Wrapper"
        android:layout_below="@id/btn_teacher_profile_edit"
        >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/std_profile_fname"
            android:id="@+id/et_teacher_profile_fname"
            android:maxLines="1"
            />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Teac_Lname_Wrapper"
        android:layout_below="@id/Teac_Fname_Wrapper"
        >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_teacher_profile_lname"
            android:hint="@string/std_profile_lname"
            android:maxLines="1"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Teac_Education_Wrapper"
        android:layout_below="@id/Teac_Lname_Wrapper"
        >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_teacher_profile_edu"
            android:hint="@string/teacher_profile_edu"
            android:maxLines="1"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Teac_Email_Wrapper"
        android:layout_below="@id/Teac_Education_Wrapper"
        >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_teacher_email"
            android:hint="@string/std_profile_email"
            android:maxLines="1"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Teac_Pass_Wrapper"
        android:layout_below="@id/Teac_Email_Wrapper"
        >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_teacher_profile_password"
            android:hint="@string/std_profile_password"
            android:maxLines="1"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Teac_Pass_Wrapper"
        android:id="@+id/Teac_Repass_Wrapper"
        >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_teacher_profile_password_reEnter"
            android:hint="@string/std_profile_password_reEnter"
            android:maxLines="1"
            />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/std_profile_signup"
        android:id="@+id/btn_teacher_profile_signup"
        />
</RelativeLayout>
