<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.lab42.maham.senseilocater.EditProfileFragment">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"

        android:layout_width="match_parent"
        android:layout_height="match_parent"
      >

    <ImageView
        android:id="@+id/img_edit_profile_activity"
        android:layout_width="@dimen/img_size"
        android:layout_height="@dimen/img_size"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginLeft="@dimen/margin_left"
        android:src="@mipmap/ic_launcher"
        android:scaleType="fitXY"
        />
    <Button
        android:id="@+id/btn_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_edit_profile_activity"
        android:text="@string/edit"
        android:layout_marginLeft="@dimen/btn_edit_margin_left"/>

    <EditText
        android:id="@+id/et_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@id/img_edit_profile_activity"
        android:layout_marginTop="@dimen/et_margin_top"
        android:layout_marginRight="@dimen/margin"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/education"
        android:layout_toEndOf="@id/img_edit_profile_activity"
        android:layout_below="@id/et_name"
        android:layout_alignParentRight="true"
        android:layout_marginTop="@dimen/et_margin_top"
        android:layout_marginRight="@dimen/margin"/>

    <EditText
        android:id="@+id/et_experience"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/experience"
        android:layout_below="@id/btn_edit"
        android:inputType="textMultiLine"
        android:lines="2"
        android:maxLines="3"
        android:minLines="2"
        android:gravity="top|left"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginRight="@dimen/margin"
        android:layout_marginTop="@dimen/margin" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/et_experience"
        android:layout_marginRight="@dimen/margin"/>
</RelativeLayout>

</FrameLayout>
