<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_students_form"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/white"
    tools:context="com.lab42.maham.senseilocater.activity_students_form">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_launcher"
        android:id="@+id/std_profile_pic"
        android:layout_centerHorizontal="true"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/std_profile_pic"
        android:id="@+id/btn_std_profile_edit"
        android:text="@string/std_profile_edit"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"
        />
    <android.support.design.widget.TextInputLayout
        android:id="@+id/Stu_FName_Wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_std_profile_edit"
        android:layout_marginTop="4dp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_std_profile_edit"
            android:hint="@string/std_profile_fname"
            android:id="@+id/et_std_profile_fname"
            android:imeActionLabel="@string/std_profile_fname"
            android:imeOptions="actionUnspecified"
            android:maxLines="1"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/Stu_Lname_Wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Stu_FName_Wrapper"
        >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_std_profile_lname"
            android:hint="@string/std_profile_lname"
            android:maxLines="1"
            />

    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/Stu_Roll_Wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Stu_Lname_Wrapper"
        >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_std_profile_rollNo"
            android:hint="@string/std_profile_rolNo"
            android:maxLines="1"
            />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/Stu_Email_Wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Stu_Roll_Wrapper"
        >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_std_profile_email"
            android:hint="@string/std_profile_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            />

    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Stu_Email_Wrapper"
        android:id="@+id/Stu_Pass_Wrapper">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_std_profile_password"
            android:hint="@string/std_profile_password"
            android:maxLines="1"
            android:inputType="textPassword"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Stu_Pass_Wrapper"
        android:id="@+id/Stu_RePass_Wrapper"
        >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_std_profile_password_reEnter"
            android:hint="@string/std_profile_password_reEnter"
            android:maxLines="1"
            android:inputType="textPassword"
            />
    </android.support.design.widget.TextInputLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/std_profile_signup"
        android:id="@+id/btn_std_profile_signup"
        />
</RelativeLayout>
