<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_weight="3"
    tools:context="com.lab42.maham.senseilocater.TeacherDetailsActivity">

  <ImageView
      android:id="@+id/img_teacher_details"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:src="@drawable/detailpic"
      android:layout_alignParentRight="true"/>
    <LinearLayout
        android:layout_toStartOf="@id/img_teacher_details"
        android:layout_alignParentLeft="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <TextView
        android:id="@+id/tv_name_teacher_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="@dimen/extra_big_font_size"
        />


    <TextView
        android:id="@+id/tv_position_teacher_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dummy_position"
        />


        <View
            android:layout_below="@+id/img_teacher_details"
            android:layout_width="match_parent"
            android:layout_height="@dimen/seperator_width"
            android:layout_marginTop="@dimen/seperator_large_margin"
            android:layout_marginBottom="@dimen/seperator_large_margin"
            android:background="@android:color/darker_gray"/>


        <TextView
            android:layout_marginTop="@dimen/pic_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description_label"
            android:textSize="@dimen/medium_font_size"
            />
        <TextView
            android:layout_marginTop="@dimen/pic_margin"
            android:id="@+id/description_teacher_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dummy_description"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/teacher_profile_check_notify"
            android:id="@+id/teacher_profile_check_notif"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            />
    </LinearLayout>
    
</RelativeLayout>
